[SYNCOPE-1023] Moving the Activiti test content setup from the all profile into the embedded profile (with condition)