@@ -192,117 +192,7 @@ ORYX.Editor.createByUrl = function(modelUrl){"/>
     </testResources>
   </build>
 
-  <profiles>
-    <profile>
-      <id>embedded</id>
-      
-      <properties>
-        <conf.directory>${project.build.directory}/test-classes</conf.directory>
-      </properties>
-      
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.syncope.fit</groupId>
-          <artifactId>syncope-fit-build-tools</artifactId>
-          <version>${syncope.version}</version>
-          <type>war</type>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      
-      <build>
-        <defaultGoal>clean verify cargo:run</defaultGoal>  
-        
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <inherited>true</inherited>
-            <executions>
-              <execution>
-                <id>setupEmbeddedConf</id>
-                <phase>package</phase>
-                <configuration>
-                  <target>
-                    <delete dir="../core/target/syncope/WEB-INF/classes/domains"/>
-                    <copy todir="../core/target/syncope/WEB-INF/classes/domains">
-                      <fileset dir="../core/target/test-classes/domains"/>
-                    </copy>
-                    <copy file="../core/target/test-classes/connid.properties" 
-                          todir="../core/target/syncope/WEB-INF/classes" 
-                          overwrite="true"/>
-                    <copy file="../core/target/test-classes/db.jsp" 
-                          todir="../core/target/syncope" 
-                          overwrite="true"/>
-
-                    <copy file="${project.build.directory}/test-classes/console.properties" 
-                          todir="${project.build.directory}/${project.build.finalName}/WEB-INF/classes" 
-                          overwrite="true"/>
-                  </target>
-                </configuration>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-      
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven2-plugin</artifactId>
-            <inherited>true</inherited>
-            <configuration>
-              <container>
-                <dependencies>
-                  <dependency>
-                    <groupId>com.h2database</groupId>
-                    <artifactId>h2</artifactId>
-                  </dependency>
-                </dependencies>
-              </container>
-              <configuration>
-                <type>standalone</type>
-                <properties>
-                  <cargo.servlet.port>${cargo.servlet.port}</cargo.servlet.port>
-                  <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
-                  <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
-
-                  <cargo.jvmargs>-noverify -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=256m</cargo.jvmargs>
-                </properties>
-              </configuration>
-              <deployables>
-                <deployable>
-                  <groupId>org.apache.syncope.fit</groupId>
-                  <artifactId>syncope-fit-build-tools</artifactId>
-                  <type>war</type>
-                  <properties>
-                    <context>syncope-fit-build-tools</context>
-                  </properties>
-                </deployable>
-                <deployable>
-                  <location>../core/target/syncope</location>
-                  <properties>
-                    <context>syncope</context>
-                  </properties>
-                </deployable>
-                <deployable>
-                  <location>${project.build.directory}/${project.build.finalName}</location>
-                  <properties>
-                    <context>syncope-console</context>
-                  </properties>
-                </deployable>
-              </deployables>
-            </configuration>
-          </plugin>
-        </plugins>  
-      </build>
-    </profile>
-    
+  <profiles>    
     <profile>
       <id>all</id>
       
